# ai-product-discovery

./: .env.docker-shared-server  .env.example  .env.shared-server  .gitignore  API_DOCUMENTATION_UPDATED.md  API_SYNCHRONIZATION_FIXES.md  COMPLETE_FRONTEND_AND_API_FIX.md  COMPLETE_PRODUCT_SYNC_FIX.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT_GUIDE.md  FRONTEND_MODULE_VISIBILITY_GUIDE.md  FRONTEND_TESTING_GUIDE.md  HTTPS_HTTP_FIX_GUIDE.md  LICENSE  LOCAL_VERIFICATION_GUIDE.md  MAGENTO_COMMANDS.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_STEPS.md  PYTHON_ENVIRONMENT_TROUBLESHOOTING.md  QUICK_DEPLOYMENT_CHECKLIST.md  README.md  README_DEPLOYMENT.md  README_LOCALHOST.md  README_SHARED_SERVER.md  REMOVE_DUMMY_DATA_FIX.md  SEARCH_ENHANCEMENTS_SUMMARY.md  SERVICE_ERRORS_FIX.md  SHARED_SERVER_DEPLOYMENT.md  SWAGGER_DOCUMENTATION_UPDATES.md  alembic.ini  check_redis_status.sh  check_rule.py  check_schema.py  clean_analytics_db.py  complete_ai_fix.sh  complete_deployment_test.sh  debug_personalization.py  (+60 more)
backend/shared/: Dockerfile.celery  __init__.py  pyproject.toml
backend/shared/auth/: __init__.py  api_key_manager.py
backend/shared/celery/: __init__.py  app.py  beat_schedule.py
backend/shared/cli/: __init__.py  api_keys.py
backend/shared/config/: __init__.py  elasticsearch.py  qdrant.py  redis.py  settings.py
backend/shared/database/: __init__.py  base.py
backend/shared/middleware/: __init__.py  auth.py  correlation_id.py  rate_limiter.py
backend/shared/models/: __init__.py  analytics.py  api_key.py  api_key_usage.py  core.py  merchandising.py  merchant.py  personalization.py  product.py  recommendation.py  user.py
backend/shared/monitoring/: __init__.py  metrics.py
backend/shared/schemas/: __init__.py  analytics.py
(+191 files in other folders)
