[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discovery-shared"
version = "0.1.0"
description = "Shared utilities and models for AI Product Discovery Suite"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "AI Product Discovery Team"}
]

dependencies = [
    # Core dependencies
    "pydantic==2.11.7",
    "pydantic-settings==2.8.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.9",
    "alembic==1.14.0",
    
    # Redis
    "redis[hiredis]==5.2.1",
    "aioredis==2.0.1",
    
    # Celery
    "celery[redis]==5.4.0",
    "flower==2.0.1",
    
    # Monitoring
    "prometheus-client==0.21.1",
    "structlog==24.4.0",
    
    # Utilities
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "tabulate==0.9.0",
    
    # HTTP Client
    "httpx==0.27.0",
    "aiohttp==3.11.10",
    
    # Monitoring & Observability
    "opentelemetry-api==1.29.0",
    "opentelemetry-sdk==1.29.0",
    "sentry-sdk[fastapi]==2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.12.0",
    "black==24.10.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "mypy==1.14.0",
]

[tool.setuptools]
# Map the 'shared' package to the current directory (where pyproject.toml is)
package-dir = {"" = "."}
# Automatically discover packages starting from current directory
packages = {find = {}}

[tool.setuptools.package-data]
"*" = ["py.typed"]
